[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-flow"
version = "0.0.1"
description = "Reflex custom component flow"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "", email = "nacxa0@gmail.com" }]
keywords = ["reflex","reflex-custom-components"]

dependencies = [
    "custom-components>=0.0.1",
    "dash>=3.2.0",
    "reflex==0.8.7",
]

classifiers = ["Development Status :: 4 - Beta"]

[project.urls]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["custom_components"]
